# DieBasicsDerInformatik

./: CMakeLists.txt  conftest.py  test.bash
Aufgabe00/: README.md  egal.txt
Aufgabe01/: README.md  solution  solution.c
Aufgabe02/: README.md  solution  solution.c  test_02.py
Aufgabe03/: README.md  solution  solution.c  test_03.py
Aufgabe04/: README.md  solution  solution.c  test_04.py
Aufgabe05/: README.md  solution  solution.c  test_05.py
